config/merchant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant-module-deployment
  labels:
    istio: enabled  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchant-module
  template:
    metadata:
      labels:
        app: merchant-module
    spec:
      containers:
      - name: merchant-module
        image: servers/merchant-module:latest
        ports:
        - containerPort: 3003
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: merchant-module-service
spec:
  selector:
    app: merchant-module
  ports:
    - protocol: TCP
      port: 3003
  type: LoadBalancer
