config/client-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-virtualservice
spec:
  hosts:
  - 127.0.0.1  # Change this to your desired domain or IP
  gateways:
  - client-gateway
  http:
  - route:
    - destination:
        host: client-service
        port:
          number: 3000
